@@ -8,6 +8,8 @@ Version 4.1.2 (04-03-12)
 -Added Romanian language files. 
 -Updated screenshot. 
 -Removed height: auto from objects in responsive style sheet. 
+-Fixed bug with archive layout of an empty category.
+-Adjusted "viewport" initial scale for full-width mobile device view. 
 
 Version 4.1.1 (03-28-12)
 -Updated missed Google Font library call for SSL support.
